Dodajam JUnit za dao in odstranjujem nekaj code smellov